<resources>
    <string name="app_name">Shop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék leírása.</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>
    <string name="guest_login">Bejelentkezés vendégként</string>
    <string name="google_login">Bejelentkezés google fiókkal</string>

    <string-array name="phone_labels">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="shopping_item_names">
        <item>Coconut Flower Syrup</item>
        <item>Bio white rice, long grain</item>
        <item>Organic Coconut Bar</item>
        <item>Vega Balls Powder</item>
        <item>Vegetable fat</item>
        <item>Extruded corn</item>
        <item>Bio carrot juice</item>
        <item>Bio rice milk</item>
        <item>Potato chips</item>
        <item>Vegan Sandwich Cream</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Kókuszvirág szirup BIO 300g</item>
        <item>Fehér rizs, hosszú szemű BIO 500g</item>
        <item>Vörös áfonyás kókuszos szelet BIO 30g</item>
        <item>Vega fasírtpor, gluténmentes, tökmagos 200g</item>
        <item>Vegán növényi zsír 180g</item>
        <item>Extrudált kukorica, pizza ízesítéssel, gluténmentes BIO 70g</item>
        <item>Répalé BIO 750ml</item>
        <item>Rizsital, gluténmentes 1l (Isola BIO)</item>
        <item>Burgonyás snack, tengeri sós BIO 85g (Organique)</item>
        <item>Vegán krém "magyaros jellegű" 180g</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.2</item>
        <item>2.8</item>
        <item>3.6</item>
        <item>4</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/coconut_flower_syrup</item>
        <item>@drawable/white_rice</item>
        <item>@drawable/organic_coconut_bar</item>
        <item>@drawable/vega_balls_powder</item>
        <item>@drawable/vegetable_fat</item>
        <item>@drawable/pizzas_extrudalt_kukorica</item>
        <item>@drawable/bio_repale</item>
        <item>@drawable/bio_rizsital</item>
        <item>@drawable/sos_burgonyas_snack</item>
        <item>@drawable/vegan_magyaros_krem</item>
    </array>

    <array name="shopping_item_price">
        <item>3500 Ft</item>
        <item>2000 Ft</item>
        <item>3250 Ft</item>
        <item>1800 Ft</item>
        <item>690 Ft</item>
        <item>590 Ft</item>
        <item>1190 Ft</item>
        <item>2490 Ft</item>
        <item>1290 Ft</item>
        <item>990 Ft</item>
    </array>
</resources>
